landing page updated

--- a/business-landing-page.html
+++ b/business-landing-page.html
@@ -29,11 +29,12 @@
               <div class="d-flex align-items-center">
                 <!-- logo  -->
                 <div class="brand_logo">
-                  <a href="./#"
-                    ><img
+                  <a href="./#">
+                    <img
                       src="./assets/images/business-landing-page/logo/logo.svg"
                       alt="logo white"
-                  /></a>
+                    />
+                  </a>
                 </div>
                 <!-- menu  -->
                 <nav class="header_nav d-none d-md-block">
@@ -65,13 +66,15 @@
                   <a
                     href="/#"
                     class="rounded-pill text-white text-capitalize alt-btn-light-outline-primary d-none d-sm-block"
-                    >login</a
                   >
+                    login
+                  </a>
                   <a
                     href="/#"
                     class="rounded-pill text-white text-capitalize alt-btn-light-primary"
-                    >Sign up</a
                   >
+                    Sign up
+                  </a>
                   <!-- mobile menu active button -->
                   <button
                     class="mobile_nav_btn d-md-none"
@@ -125,14 +128,15 @@
             </div>
             <div class="">
               <div class="d-flex flex-column gap-3">
-                <a href="" class="btn alt-btn-light-primary rounded-pill"
-                  >Sign up</a
-                >
+                <a href="" class="btn alt-btn-light-primary rounded-pill">
+                  Sign up
+                </a>
                 <a
                   href=""
                   class="btn alt-btn-light-outline-primary rounded-pill"
-                  >Log in</a
                 >
+                  Log in
+                </a>
               </div>
             </div>
           </div>
@@ -157,7 +161,8 @@
               <!-- title  -->
               <div class="hero_content">
                 <h1 class="text-white">
-                  Discover unique <br />
+                  Discover unique
+                  <br />
                   talent.
                 </h1>
                 <p class="text-white">
@@ -183,7 +188,9 @@
           <div class="col col-md-8 offset-md-2">
             <div class="company_logos_content text-center">
               <h2 class="text-white">
-                Join <strong>4,000+ companies</strong> already growing
+                Join
+                <strong>4,000+ companies</strong>
+                already growing
               </h2>
               <div class="company_logos">
                 <img
@@ -253,11 +260,13 @@
                   />
                 </div>
                 <h2 class="text-white">
-                  Track project <br />
+                  Track project
+                  <br />
                   milestones
                 </h2>
                 <p class="text-white">
-                  Break down projects into achievable <br />
+                  Break down projects into achievable
+                  <br />
                   milestones.
                 </p>
               </div>
@@ -276,11 +285,13 @@
                   />
                 </div>
                 <h2 class="text-white">
-                  Competitions & <br />
+                  Competitions &
+                  <br />
                   events
                 </h2>
                 <p class="text-white">
-                  Get the chance to conduct or participate <br />
+                  Get the chance to conduct or participate
+                  <br />
                   in exciting events.
                 </p>
               </div>
@@ -300,7 +311,8 @@
                 </div>
                 <h2 class="text-white">Secure agreements</h2>
                 <p class="text-white">
-                  Protect your interests with an <br />
+                  Protect your interests with an
+                  <br />
                   iron-clad agreement.
                 </p>
               </div>
@@ -320,7 +332,8 @@
                 </div>
                 <h2 class="text-white">Strong Community</h2>
                 <p class="text-white">
-                  Be a part of a large network of businesses <br />
+                  Be a part of a large network of businesses
+                  <br />
                   and freelancers.
                 </p>
               </div>
@@ -339,11 +352,13 @@
                   />
                 </div>
                 <h2 class="text-white">
-                  Form your own <br />
+                  Form your own
+                  <br />
                   unique tribes
                 </h2>
                 <p class="text-white">
-                  Create blended tribes for complex <br />
+                  Create blended tribes for complex
+                  <br />
                   projects.
                 </p>
               </div>
@@ -409,12 +424,13 @@
             <div class="section_title pb-4 pb-md-0">
               <h2>Project categories</h2>
               <p>
-                Discover a plethora of freelancers across <br />
+                Discover a plethora of freelancers across
+                <br />
                 various domains.
               </p>
-              <a href="/#" class="rounded-pill btn-alt-outline"
-                >What do you need?</a
-              >
+              <a href="/#" class="rounded-pill btn-alt-outline">
+                What do you need?
+              </a>
             </div>
           </div>
           <div class="col-md-6">
@@ -484,7 +500,8 @@
               <h2>Alt Tribe streamlines business processes</h2>
               <p>
                 Simplify your business journey, streamline operations, and
-                achieve <br />
+                achieve
+                <br />
                 effortless success with our platform.
               </p>
             </div>
@@ -504,12 +521,13 @@
             </div>
           </div>
           <div class="col-12 col-md-3 position-relative">
-            <span
-              ><img
+            <span>
+              <img
                 class="indicatore_1 d-none d-md-block"
                 src="./assets/images/freelance-landing-page/icons/step-1-icons.svg"
                 alt=""
-            /></span>
+              />
+            </span>
             <div
               class="freelance_experience_content step_2 d-flex flex-column justify-content-end"
             >
@@ -519,12 +537,13 @@
             </div>
           </div>
           <div class="col-12 col-md-3 position-relative">
-            <span
-              ><img
+            <span>
+              <img
                 class="indicatore_2 d-none d-md-block"
                 src="./assets/images/freelance-landing-page/icons/step-3-icons.svg"
                 alt=""
-            /></span>
+              />
+            </span>
             <div
               class="freelance_experience_content step_3 d-flex flex-column justify-content-end"
             >
@@ -532,20 +551,22 @@
               <h3>Sign an agreement</h3>
               <h6>Confirm terms with a signed freelance agreement.</h6>
             </div>
-            <span
-              ><img
+            <span>
+              <img
                 class="indicatore_3 d-none d-md-block"
                 src="./assets/images/freelance-landing-page/icons/step-2-icons.svg"
                 alt=""
-            /></span>
+              />
+            </span>
           </div>
           <div class="col-12 col-md-3 position-relative">
-            <span
-              ><img
+            <span>
+              <img
                 class="indicatore_4 d-none d-md-block"
                 src="./assets/images/freelance-landing-page/icons/step-4-icons.svg"
                 alt=""
-            /></span>
+              />
+            </span>
             <div
               class="freelance_experience_content step_4 d-flex flex-column justify-content-end"
             >
@@ -564,7 +585,8 @@
           <div class="col col-md-6 offset-md-3">
             <div class="section_title pb-4 pb-md-0">
               <h2>
-                Great talent is always <br />
+                Great talent is always
+                <br />
                 a part of Alt Tribe
               </h2>
               <p>
@@ -582,14 +604,15 @@
               >
                 <div class="talent_content position-relative">
                   <span class="ratting btn-alt-outline py-1 px-1 rounded-pill">
-                    <span class="me-1"
-                      ><img
+                    <span class="me-1">
+                      <img
                         class=""
                         src="./assets/images/freelance-landing-page/icons/Star.svg"
                         alt=""
-                    /></span>
-                    <span class="me-2">Star</span></span
-                  >
+                      />
+                    </span>
+                    <span class="me-2">Star</span>
+                  </span>
                   <div class="talent_img pb-3">
                     <img
                       src="https://via.placeholder.com/74x74"
@@ -626,14 +649,15 @@
               >
                 <div class="talent_content position-relative">
                   <span class="ratting btn-alt-outline py-1 px-1 rounded-pill">
-                    <span class="me-1"
-                      ><img
+                    <span class="me-1">
+                      <img
                         class=""
                         src="./assets/images/freelance-landing-page/icons/Star.svg"
                         alt=""
-                    /></span>
-                    <span class="me-2">Superstar</span></span
-                  >
+                      />
+                    </span>
+                    <span class="me-2">Superstar</span>
+                  </span>
                   <div class="talent_img pb-3">
                     <img
                       src="https://i.pravatar.cc/74"
@@ -670,14 +694,15 @@
               >
                 <div class="talent_content position-relative">
                   <span class="ratting btn-alt-outline py-1 px-1 rounded-pill">
-                    <span class="me-1"
-                      ><img
+                    <span class="me-1">
+                      <img
                         class=""
                         src="./assets/images/freelance-landing-page/icons/Star.svg"
                         alt=""
-                    /></span>
-                    <span class="me-2">Rising star</span></span
-                  >
+                      />
+                    </span>
+                    <span class="me-2">Rising star</span>
+                  </span>
                   <div class="talent_img pb-3">
                     <img
                       src="https://i.pravatar.cc/74"
@@ -714,14 +739,15 @@
               >
                 <div class="talent_content position-relative">
                   <span class="ratting btn-alt-outline py-1 px-1 rounded-pill">
-                    <span class="me-1"
-                      ><img
+                    <span class="me-1">
+                      <img
                         class=""
                         src="./assets/images/freelance-landing-page/icons/Star.svg"
                         alt=""
-                    /></span>
-                    <span class="me-2">Rising star</span></span
-                  >
+                      />
+                    </span>
+                    <span class="me-2">Rising star</span>
+                  </span>
                   <div class="talent_img pb-3">
                     <img
                       src="https://i.pravatar.cc/74"
@@ -787,11 +813,12 @@
               <div
                 class="slider_item bg-alt-dark-theme-secondary border border-light-subtle"
               >
-                <span
-                  ><img
+                <span>
+                  <img
                     src="./assets/images/freelance-landing-page/icons/slider-icon.svg"
                     alt=""
-                /></span>
+                  />
+                </span>
                 <p class="text-white">
                   We couldn’t find a freelancer that met our expectation until
                   we turned to Alt Tribe. Managing the the project on the
@@ -813,11 +840,12 @@
               <div
                 class="slider_item bg-alt-dark-theme-secondary border border-light-subtle"
               >
-                <span
-                  ><img
+                <span>
+                  <img
                     src="./assets/images/freelance-landing-page/icons/slider-icon.svg"
                     alt=""
-                /></span>
+                  />
+                </span>
                 <p class="text-white">
                   Thanks to the projects we did on Alt tribe, we were able to
                   launch our business three months earlier than planned.
@@ -838,11 +866,12 @@
               <div
                 class="slider_item bg-alt-dark-theme-secondary border border-light-subtle"
               >
-                <span
-                  ><img
+                <span>
+                  <img
                     src="./assets/images/freelance-landing-page/icons/slider-icon.svg"
                     alt=""
-                /></span>
+                  />
+                </span>
                 <p class="text-white">
                   Milestones are so easy to define and track on Alt tribe that
                   you don’t really struggle with the direction of the project.
@@ -863,11 +892,12 @@
               <div
                 class="slider_item bg-alt-dark-theme-secondary border border-light-subtle"
               >
-                <span
-                  ><img
+                <span>
+                  <img
                     src="./assets/images/freelance-landing-page/icons/slider-icon.svg"
                     alt=""
-                /></span>
+                  />
+                </span>
                 <p class="text-white">
                   We couldn’t find a freelancer that met our expectation until
                   we turned to Alt Tribe. Managing the the project on the
@@ -889,11 +919,12 @@
               <div
                 class="slider_item bg-alt-dark-theme-secondary border border-light-subtle"
               >
-                <span
-                  ><img
+                <span>
+                  <img
                     src="./assets/images/freelance-landing-page/icons/slider-icon.svg"
                     alt=""
-                /></span>
+                  />
+                </span>
                 <p class="text-white">
                   Thanks to the projects we did on Alt tribe, we were able to
                   launch our business three months earlier than planned.
@@ -914,11 +945,12 @@
               <div
                 class="slider_item bg-alt-dark-theme-secondary border border-light-subtle"
               >
-                <span
-                  ><img
+                <span>
+                  <img
                     src="./assets/images/freelance-landing-page/icons/slider-icon.svg"
                     alt=""
-                /></span>
+                  />
+                </span>
                 <p class="text-white">
                   Milestones are so easy to define and track on Alt tribe that
                   you don’t really struggle with the direction of the project.
@@ -1095,13 +1127,14 @@
             <div class="promo_bg">
               <div class="promo_content d-flex flex-column justify-content-end">
                 <h2>
-                  Start your Alt Tribe journey today, <br />
+                  Start your Alt Tribe journey today,
+                  <br />
                   and elevate your impact.
                 </h2>
                 <div class="">
-                  <a href="/#" class="rounded-pill alt-btn-light-primary"
-                    >Join as a business</a
-                  >
+                  <a href="/#" class="rounded-pill alt-btn-light-primary">
+                    Join as a business
+                  </a>
                 </div>
               </div>
             </div>
@@ -1134,7 +1167,9 @@
                 <li><a href="/#">Privacy policy</a></li>
               </ul>
               <p>
-                Need help? Contact us at <strong>+91 804 112 1109</strong> or
+                Need help? Contact us at
+                <strong>+91 804 112 1109</strong>
+                or
                 <strong>alttribe.world@gmail.com</strong>
               </p>
             </div>
@@ -1142,8 +1177,6 @@
         </div>
       </div>
     </footer>
-
-    <button><i class="fa-solid fa-angle-right"></i></button>
 
     <script src="./assets/vendor/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/vendor/js/jquery-1.11.0.min.js"></script>
