landing page is completed

--- a/business-landing-page.html
+++ b/business-landing-page.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/vendor/css/slick.css" />
     <link rel="stylesheet" href="./assets/vendor/css/slick-theme.css" />
 
-    <title>Freelance landing page</title>
+    <title>Business landing page</title>
     <link rel="stylesheet" href="./css/custom.min.css" />
   </head>
   <body class="dark_theme">
