changes all save icons

--- a/business/04-explore-freelancers/business-explore-freelancers-page.html
+++ b/business/04-explore-freelancers/business-explore-freelancers-page.html
@@ -1363,10 +1363,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -1474,10 +1473,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -1987,10 +1985,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -2098,10 +2095,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -2611,10 +2607,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -2722,10 +2717,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -3235,10 +3229,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -3346,10 +3339,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -3859,10 +3851,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -3970,10 +3961,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -4483,10 +4473,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -4594,10 +4583,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
