--- a/business/05-community/business-community-feeds-page-2.html
+++ b/business/05-community/business-community-feeds-page-2.html
@@ -1193,10 +1193,9 @@ bdb = business dashboard;
                             <button
                               class="bookmakr position-relative top-0 start-0 ms-auto rounded-circle"
                             >
-                              <img
-                                src="../../assets/images/search-page/icons/bookmark.svg"
-                                alt=""
-                              />
+                              <span>
+                                <i class="fa-regular fa-bookmark"></i>
+                              </span>
                             </button>
                           </div>
                           <div class=""></div>
@@ -1300,10 +1299,9 @@ bdb = business dashboard;
                             <button
                               class="bookmakr position-relative top-0 start-0 ms-auto rounded-circle"
                             >
-                              <img
-                                src="../../assets/images/search-page/icons/bookmark.svg"
-                                alt=""
-                              />
+                              <span>
+                                <i class="fa-regular fa-bookmark"></i>
+                              </span>
                             </button>
                           </div>
                           <div class=""></div>
