--- a/search-page.html
+++ b/search-page.html
@@ -29,7 +29,7 @@
               <div class="d-flex align-items-center">
                 <!-- logo  -->
                 <div class="brand_logo">
-                  <a href="./#"></a>
+                  <a href="./#">
                     <img
                       src="./assets/images/freelance-landing-page/alt-logo-white.svg"
                       alt="logo white"
@@ -1383,10 +1383,7 @@
                       Invite to project
                     </button>
                     <button class="bookmakr rounded-circle">
-                      <img
-                        src="./assets/images/search-page/icons/bookmark.svg"
-                        alt=""
-                      />
+                      <span><i class="fa-regular fa-bookmark"></i></span>
                     </button>
                   </div>
                 </div>
@@ -1477,10 +1474,7 @@
                       Invite to project
                     </button>
                     <button class="bookmakr rounded-circle">
-                      <img
-                        src="./assets/images/search-page/icons/bookmark.svg"
-                        alt=""
-                      />
+                      <span><i class="fa-regular fa-bookmark"></i></span>
                     </button>
                   </div>
                 </div>
@@ -1571,10 +1565,7 @@
                       Invite to project
                     </button>
                     <button class="bookmakr rounded-circle">
-                      <img
-                        src="./assets/images/search-page/icons/bookmark.svg"
-                        alt=""
-                      />
+                      <span><i class="fa-regular fa-bookmark"></i></span>
                     </button>
                   </div>
                 </div>
@@ -1665,10 +1656,7 @@
                       Invite to project
                     </button>
                     <button class="bookmakr rounded-circle">
-                      <img
-                        src="./assets/images/search-page/icons/bookmark.svg"
-                        alt=""
-                      />
+                      <span><i class="fa-regular fa-bookmark"></i></span>
                     </button>
                   </div>
                 </div>
@@ -1759,10 +1747,7 @@
                       Invite to project
                     </button>
                     <button class="bookmakr rounded-circle">
-                      <img
-                        src="./assets/images/search-page/icons/bookmark.svg"
-                        alt=""
-                      />
+                      <span><i class="fa-regular fa-bookmark"></i></span>
                     </button>
                   </div>
                 </div>
