--- a/business/09-profile/business-profile-page.html
+++ b/business/09-profile/business-profile-page.html
@@ -1478,10 +1478,9 @@ bdb = business dashboard;
                                   <button
                                     class="bookmakr position-relative top-0 start-0 ms-auto rounded-circle"
                                   >
-                                    <img
-                                      src="../../assets/images/search-page/icons/bookmark.svg"
-                                      alt=""
-                                    />
+                                    <span>
+                                      <i class="fa-regular fa-bookmark"></i>
+                                    </span>
                                   </button>
                                 </div>
                                 <div class=""></div>
@@ -1590,10 +1589,9 @@ bdb = business dashboard;
                                   <button
                                     class="bookmakr position-relative top-0 start-0 ms-auto rounded-circle"
                                   >
-                                    <img
-                                      src="../../assets/images/search-page/icons/bookmark.svg"
-                                      alt=""
-                                    />
+                                    <span>
+                                      <i class="fa-regular fa-bookmark"></i>
+                                    </span>
                                   </button>
                                 </div>
                                 <div class=""></div>
@@ -2079,10 +2077,9 @@ bdb = business dashboard;
                               View Profile
                             </button>
                             <button class="bookmakr rounded-circle">
-                              <img
-                                src="../../assets/images/search-page/icons/bookmark.svg"
-                                alt=""
-                              />
+                              <span>
+                                <i class="fa-regular fa-bookmark"></i>
+                              </span>
                             </button>
                           </div>
                         </div>
