--- a/business/12-saved/business-saved-page.html
+++ b/business/12-saved/business-saved-page.html
@@ -1258,10 +1258,9 @@ bdb = business dashboard;
                                 Invite to project
                               </button>
                               <button class="bookmakr rounded-circle">
-                                <img
-                                  src="../../assets/images/search-page/icons/bookmark.svg"
-                                  alt=""
-                                />
+                                <span>
+                                  <i class="fa-regular fa-bookmark"></i>
+                                </span>
                               </button>
                             </div>
                           </div>
@@ -1399,10 +1398,9 @@ bdb = business dashboard;
                                       Invite to project
                                     </button>
                                     <button class="bookmakr rounded-circle">
-                                      <img
-                                        src="../../assets/images/search-page/icons/bookmark.svg"
-                                        alt=""
-                                      />
+                                      <span>
+                                        <i class="fa-regular fa-bookmark"></i>
+                                      </span>
                                     </button>
                                   </div>
                                 </div>
@@ -1535,10 +1533,9 @@ bdb = business dashboard;
                               View agreement
                             </button>
                             <button class="bookmakr rounded-circle">
-                              <img
-                                src="../../assets/images/search-page/icons/bookmark.svg"
-                                alt=""
-                              />
+                              <span>
+                                <i class="fa-regular fa-bookmark"></i>
+                              </span>
                             </button>
                           </div>
                         </div>
