--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -9,13 +9,10 @@ bdb = business dashboard;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- font awesome icons links  -->
-    <link
-      rel="stylesheet"
-      href="../../assets/fontawesomes/css/fontawesome.min.css"
-    />
+
     <link rel="stylesheet" href="../../assets/fontawesomes/css/all.min.css" />
     <title>Business Dashboard</title>
-    <link rel="stylesheet" href="../../css/bisuness.dashboard.min.css" />
+    <link rel="stylesheet" href="../../css/common-main.min.css" />
   </head>
   <body>
     <header class="alt_bdb_header">
@@ -96,7 +93,7 @@ bdb = business dashboard;
               </div>
             </div>
           </div>
-          <div class="col-lg-7 pt-3 pt-lg-0">
+          <div class="col-lg-7 pt-3 pt-lg-0 px-4">
             <div class="wellcome_message d-flex mt-1 align-items-center">
               <p class="fs-6">
                 Hi, Good evening
@@ -1046,7 +1043,7 @@ bdb = business dashboard;
           </div>
           <!-- sidebar left end -->
 
-          <div class="col-lg-7">
+          <div class="col-lg-7 px-4">
             <!--  -->
             <div
               class="alt_bdb_promo promo_bg mb-5 d-flex flex-column justify-content-start border border-light-subtle"
