add dashboard style

--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -93,7 +93,7 @@ bdb = business dashboard;
               </div>
             </div>
           </div>
-          <div class="col-lg-7 pt-3 pt-lg-0 px-4">
+          <div class="col-lg-7 pt-3 pt-lg-0 px-lg-4">
             <div class="wellcome_message d-flex mt-1 align-items-center">
               <p class="fs-6">
                 Hi, Good evening
@@ -1043,7 +1043,7 @@ bdb = business dashboard;
           </div>
           <!-- sidebar left end -->
 
-          <div class="col-lg-7 px-4">
+          <div class="col-lg-7 px-lg-4">
             <!--  -->
             <div
               class="alt_bdb_promo promo_bg mb-5 d-flex flex-column justify-content-start border border-light-subtle"
