--- a/business/02-dashboard/business-dashboard.html
+++ b/business/02-dashboard/business-dashboard.html
@@ -17,10 +17,10 @@ bdb = business dashboard;
   <body>
     <header class="alt_bdb_header">
       <div class="container-xxl">
-        <div class="row">
-          <div class="col-lg-2 border-end border-light-subtle">
+        <div class="row align-items-center">
+          <div class="col-lg-2 position-relative">
             <div
-              class="alt_bdb_logo d-flex justify-content-between align-items-lg-start"
+              class="alt_bdb_logo d-flex justify-content-between align-items-lg-start custom-border"
             >
               <div class="d-flex flex-row gap-2 align-items-start">
                 <!-- mobile menu bar  -->
@@ -38,7 +38,7 @@ bdb = business dashboard;
                 </button>
                 <!-- logo  -->
                 <div
-                  class="d-flex flex-row flex-lg-column align-items-center align-items-lg-start justify-content-start"
+                  class="position-relative d-flex flex-row flex-lg-column align-items-center align-items-lg-start justify-content-start"
                 >
                   <a href="/#">
                     <img
@@ -47,7 +47,7 @@ bdb = business dashboard;
                     />
                   </a>
                   <!-- role badge  -->
-                  <div class="ms-2 ms-lg-0">
+                  <div class="user-role ms-2 ms-lg-0">
                     <span class="badge rounded-pill text-bg-warning">
                       Business
                     </span>
@@ -93,8 +93,8 @@ bdb = business dashboard;
               </div>
             </div>
           </div>
-          <div class="col-lg-7 pt-3 pt-lg-0 px-lg-4">
-            <div class="wellcome_message d-flex mt-1 align-items-center">
+          <div class="col-lg-7 pt-3 pt-lg-0 px-3 px-lg-5">
+            <div class="wellcome_message d-flex align-items-center">
               <p class="fs-6">
                 Hi, Good evening
                 <strong>James Jacobe</strong>
@@ -115,7 +115,7 @@ bdb = business dashboard;
               <div class="alt_bdb_header_search position-relative">
                 <form action="">
                   <input
-                    class="position-relative bg-alt-gray-bg-clr border-0"
+                    class="position-relative bg-white border-0"
                     type="text"
                     placeholder="Search"
                   />
@@ -165,7 +165,7 @@ bdb = business dashboard;
                   aria-expanded="false"
                 >
                   <img
-                    src="https://via.placeholder.com/32x32"
+                    src="https://placehold.co/32x32"
                     alt="user icon"
                     class="rounded-circle"
                   />
@@ -1043,7 +1043,7 @@ bdb = business dashboard;
           </div>
           <!-- sidebar left end -->
 
-          <div class="col-lg-7 px-lg-4">
+          <div class="col-lg-7 px-3 px-lg-5">
             <!--  -->
             <div
               class="alt_bdb_promo promo_bg mb-5 d-flex flex-column justify-content-start border border-light-subtle"
